force-app/main/default/objects/UserSalesTacticalPlan__c/UserSalesTacticalPlan__c.object-meta.xml
<CustomObject>
    <label>UserSalesTacticalPlan</label>
    <nameField>
        <label>UserSalesTacticalPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserSalesTacticalPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>