force-app/main/default/objects/UserSalesTacticalPlan__c/fields/Tactic_Opp_Value__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Opp_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tactic: Opp. Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>