force-app/main/default/objects/UserSalesTacticalPlan__c/fields/Tactic_Proximity_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Proximity_to_Renewal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tactic: Proximity to Renewal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>