force-app/main/default/objects/UserSalesTacticalPlan__c/fields/Tactic_Sector_Focus__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Sector_Focus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tactic: Sector Focus</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>