force-app/main/default/objects/UserSalesTacticalPlan__c/fields/Tactical_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Tactical_Ordering__c</fullName>
    <defaultValue>&#39;&#39;</defaultValue>
    <description>This is used to populate the dual list box in the management flow. It generally shouldn&#39;t be edited outside of that dual list box.</description>
    <label>Tactical_Ordering</label>
    <length>200</length>
    <type>Text</type>
</CustomField>